--- a/config.json
+++ b/config.json
@@ -1,24 +1,31 @@
 {
+
 	"pools":[
+
 	{
+
 		"name": "pool.verus.io",
-        "url": "stratum+tcp://pool.verus.io:9998",
-		"timeout": 150,
-		"disabled": 0
-	},
-	{
-		"name": "verus.farm (Quipacorn)",
-        "url": "stratum+tcp://verus.farm:9999",
-		"timeout": 60,
-		"time-limit": 600,
-		"disabled": 0
+
+        "url": "stratum+tcp://verushash.auto.nicehash.com:9200",
+
+		"timeout": 150
+
 	}],
+
 	
-	"user": "i81XL8ZpuCo9jmWLv5L5ikdxrGuHrrpQLz.Donator##",
+
+	"user": "NHbQXDZAFHYcrcQQNcV3p43BNdWZH9nDN17n.VERUS_MINER_3",
+
 	"algo": "verus",
+
 	"threads": 8,
+
 	"cpu-priority": 1,
+
 	"retry-pause": 5,
+
 	"api-allow": "192.168.0.0/16",
+
 	"api-bind": "0.0.0.0:4068"
+
 }
